Removed no longer needed code
this supressed double scrollbars on factlink.com, but we only show the
sidebar on external sites now.

--- a/core/app/assets/stylesheets/bubble/discussion_sidebar.scss
+++ b/core/app/assets/stylesheets/bubble/discussion_sidebar.scss
@@ -3,10 +3,6 @@ $discussionSidebarShadow: rgba(50, 50, 50, 0.3);
 // keep time in sync with DiscussionSidebarContainer
 $discussionSidebarTransitionTime: 0.4s;
 
-body.discussion-sidebar-open {
-  overflow: hidden;
-}
-
 .discussion-sidebar-container {
   position: fixed;
   top: 0; right: 0; bottom: 0; left: 0;
